@@ -1,5 +1,9 @@
 2009-04-24  Bruno Haible  <bruno@clisp.org>
 
+	* gnulib-m4/gnulib-cache.m4: Updated by gnulib-tool.
+
+2009-04-24  Bruno Haible  <bruno@clisp.org>
+
 	Make the installed package relocatable.
 	* autogen.sh (GNULIB_MODULES): Add relocatable-lib-lgpl.
 	* lib/Makefile.am (AM_CPPFLAGS): Add DEPENDS_ON_LIBICONV definition.
